--- a/Online-food-ordering.Models/Online-food-ordering.Models.csproj
+++ b/Online-food-ordering.Models/Online-food-ordering.Models.csproj
@@ -4,7 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Online_food_ordering.Models</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
