--- a/Online-food-ordering.Web/Online-food-ordering.Web.csproj
+++ b/Online-food-ordering.Web/Online-food-ordering.Web.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Online_food_ordering.Web</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
+  </ItemGroup>
 
 </Project>
