--- a/Online-food-ordering.Repository/Online-food-ordering.Repository.csproj
+++ b/Online-food-ordering.Repository/Online-food-ordering.Repository.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Online-food-ordering.Models\Online-food-ordering.Models.csproj" />
+  </ItemGroup>
+
 </Project>
