--- a/Online-food-ordering.Web/appsettings.json
+++ b/Online-food-ordering.Web/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=OnlineFastFood;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
